# Tinycom

./: .gitignore  Cargo.toml  README.md
benches/: cpu_benchmark.rs
documentation/: CPU.md
src/: main.rs
src/cpu/: mod.rs
src/cpu/isa/: mod.rs  opcode.rs
src/emulator/: cpu.rs  mod.rs  registers.rs
src/isa/: mod.rs
tinycom/: Cargo.toml
tinycom-common/: Cargo.toml
tinycom-common/src/: lib.rs
tinycom-common/src/cpu/: cpu.rs  mod.rs  register.rs
tinycom-common/src/cpu/isa/: instruction.rs
tinycom-common/src/isa/: instruction.rs  opcode.rs
tinycom-emulator/: Cargo.toml
tinycom-emulator/src/: lib.rs
tinycom-emulator/src/cpu/: cpu.rs  mod.rs
tinycom/src/: main.rs
